# Algorithms

./: .gitignore  README.md  setup.py
431/: report
431/hw2/: ..pstat  __main__.py  clook_seek.py  elevator_seek.py  exceptions.py  first_come_first_serve.py  heap.py  seek_algorithm.py  seek_request.py  shortest_seek_first.py
src/: __init__.py  runtime.py  timer.py
src/binary_heap/: MaxHeap.java  UnitTest.java  UserInterface.java
src/binary_search_tree/: BST.java  Main.java  Node.java  UnitTest.java  UserInterface.java
src/bubble_sort/: __main__.py
src/calc_roots/: .directory  Bisection0.csv  Bisection1.csv  Bisection2.csv  False-position0.csv  False-position1.csv  False-position2.csv  FuncA_Root1.ods  Modified Secant0.csv  Modified Secant1.csv  Modified Secant2.csv  Newton-Raphson0.csv  Newton-Raphson1.csv  Newton-Raphson2.csv  Secant0.csv  Secant1.csv  Secant2.csv  bisection.cpp  bisection.h  bracketing_method.cpp  bracketing_method.h  calc_roots.cbp  main.cpp  (+12 more)
src/isolation_minimax_alpha_beta/: AIAgent.cpp  AIAgent.h  Action.cpp  Action.h  Agent.cpp  Agent.h  Board.cpp  Board.h  BoardAction.cpp  BoardAction.h  CMakeLists.txt  Heuristic.cpp  HumanAgent.cpp  IndexScoreTuple.cpp  LinearEquation.cpp  MinMaxAlphaBeta.cpp  MinMaxAlphaBeta.h  README.md  State.cpp  State.h  UserInterface.cpp  UserInterface.h  main.cpp
src/isolation_minimax_alpha_beta/headers/: AIAgent.h  Agent.h  Board.h  BoardAction.h  Heuristic.h  HumanAgent.h  IndexScoreTuple.h  LinearEquation.h  MinMaxAlphaBeta.h  UserInterface.h
src/isolation_minimax_alpha_beta/unit-tests/: test-board.cpp
(+155 files in other folders)
